--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OnboardActivity"
         tools:targetApi="31">
+
         <activity
             android:name=".HomeActivity"
             android:exported="true"
         />
+
         <activity
             android:name=".SignInActivity"
             android:exported="true"
         />
+
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="true"
+        />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
