--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.21'
+    id 'kotlin-kapt' // Для Room
 }
 
 android {
@@ -40,23 +41,24 @@ android {
 }
 
 dependencies {
-    // Navigation
     def nav_version = "2.7.2"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    // Core Android Libraries
+    def room_version = "2.5.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    // Kotlin Standard Library
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.21"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.21"
     implementation "org.jetbrains.kotlin:kotlin-serialization:1.7.21"
 
-    // Ktor (Client for HTTP communication)
     def ktor_version = "2.3.4"
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-cio:$ktor_version" // CIO engine for Ktor
@@ -64,14 +66,11 @@ dependencies {
     implementation "io.ktor:ktor-client-content-negotiation:$ktor_version" // Content negotiation
     implementation "io.ktor:ktor-serialization-kotlinx-json:$ktor_version" // Serialization with kotlinx
 
-    // Kotlinx Serialization
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
 
-    // Coroutines (optional, for async programming)
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 
-    // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
